Fix footer z-index

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -188,7 +188,7 @@ footer {
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-column-gap: 20px;
         position: relative;
-        z-index: 9999;
+        z-index: 97;
         .col {
             display: flex;
             flex-direction: column;
@@ -222,7 +222,7 @@ footer {
         flex-direction: column;
         align-items: center;
         position: relative;
-        z-index: 9999;
+        z-index: 97;
         .col {
             display: flex;
             flex-direction: column;
